# MavenAGI

./: AGIEngine.java  App.java  AppTest.java  LICENSE  README.md  pom.xml
MavenAGI/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
MavenAGI/docs/: ADDING_TOOLS.md  ARCHITECTURE.md  EVALS.md
MavenAGI/evals/datasets/: smoke.jsonl
MavenAGI/src/maven_agi/: __init__.py  agent.py  cli.py  guardrails.py  llm.py  tracing.py  types.py
MavenAGI/src/maven_agi/evals/: harness.py
MavenAGI/src/maven_agi/rag/: __init__.py  index.py
MavenAGI/src/maven_agi/tools/: builtins.py  protocol.py  rag_tools.py  registry.py
MavenAGI/tests/: test_agent_smoke.py  test_tools.py
