[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maven-agi"
version = "0.1.0"
description = "MavenAGI: production-friendly AI agent template with tools, guardrails, tracing, and evals."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Ethan (pen name)", email="noreply@example.com"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
mavenagi = "maven_agi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
